--- a/index.html
+++ b/index.html
@@ -14,3 +14,11 @@
   <!-- javascript link -->
   <script src="script.js" async></script>
 </head>
+
+<body>
+    <main>
+        <h1>Area Calculator</h1>
+    </main>
+</body>
+
+</html>
