--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 <body>
     <main>
         <h1>Area Calculator</h1>
+        <p>
+            This Custom Calculator results in the area of the shape chosen. <br>
+            Calculator Dropdown has 4 shapes: Circle, Triangle, Square, Rectangle. <br>
+            Area Formulas will be showns dependent on user's choice.
+        </p>
     </main>
 </body>
 
