created for tag html

--- a/index.html
+++ b/index.html
@@ -15,14 +15,29 @@
   <script src="script.js" async></script>
 </head>
 
+<!-- start of body -->
 <body>
+    <!-- start of main -->
     <main>
         <h1>Area Calculator</h1>
         <p>
-            This Custom Calculator results in the area of the shape chosen. <br>
+            This Custom Calculator results in calculating the area of 4 geometric shapes. <br>
             Calculator Dropdown has 4 shapes: Circle, Triangle, Square, Rectangle. <br>
-            Area Formulas will be showns dependent on user's choice.
+            Area Formulas will be showns dependent on user's choice. <br>
+            Input for shape(s) is drop down options. <br>
+            Input for side is type number. <br>
         </p>
+
+        <!-- Form tag is used to collect user input-->
+        <!-- action for 'calculate button' when user submits -->
+        <!-- form tag below calls 2 functions: calculateArea() and updateForm() -->
+        <form action="javascript:calculateArea()" onchange="javascript:updateForm()"></form>
+
+
+
+        
+
+        
     </main>
 </body>
 
