--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- now, we need to handle the inputs for each of these shapes -->
         <!-- A div / section can be used to handle this -->
 
-        <!-- div for circle -->
+        <!-- div info for circle -->
         <div id="id_inputs_circle">
             <!-- label for input: circle -->
             <label for="id_radius">Radius</label>
@@ -62,7 +62,7 @@
             <h2><em>A = &Pi;r<sup>2</sup></em></h2>
         </div>
 
-        <!-- div for triangle -->
+        <!-- div info for triangle -->
         <!-- hidden attribute to hide element for now -->
         <div id="id_inputs_triangle" hidden>
             <label for="id_base">Base</label>
@@ -74,7 +74,7 @@
             <h2><em>A = <sup>bh</sup>&frasl;<sub>2</sub></em></h2>
         </div>
 
-        <!-- div for square -->
+        <!-- div info for square -->
         <!-- hidden attribute to hide element for now -->
         <div id="id_inputs_square" hidden>
             <label for="id_side">Side</label>
@@ -84,7 +84,7 @@
             <h2><em>A = s<sup>2</sup></em></h2>
         </div>
 
-        <!-- div for rectangle -->
+        <!-- div info for rectangle -->
         <!-- hidden attribute to hide element for now -->
         <div id="id_inputs_rectangle" hidden>
             <label for="id_length">Length</label>
@@ -96,13 +96,11 @@
             <h2><em>A = lw</em></h2>
         </div>
 
+        <!-- now, we need our submit botton  -->
+        <input type="submit" value="Calculate Area">
+        <!-- id for disaplyed output of the area; id so it can be referred  in javascript -->
+        <p id="id_output"></p>
 
-
-
-
-        
-
-        
     </main>
 </body>
 
