--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <main>
         <h1>Area Calculator</h1>
         <p>
-            Information: <br><br>
-            This Custom Calculator results in calculating the area of 4 geometric shapes. <br>
-            Calculator Dropdown has 4 shapes: Circle, Triangle, Square, Rectangle. <br>
-            Area Formulas will be showns dependent on user's choice. <br>
+            <u> <b>Information: </b> </u> <br><br>
+            This Custom Calculator results in <br>
+            finding the area of 4 geometric shapes: <br> <br>
+            Circle | Triangle | Square | Rectangle<br> <br>
+            Area Formulas will be shown depending on user's choice. <br>
             Input for shape(s) is drop down options. <br>
             Input for side is type number. <br>
         </p>
