--- a/index.html
+++ b/index.html
@@ -2,107 +2,113 @@
 <!DOCTYPE html>
 <!--Start of html-->
 <html lang="en">
-<!-- site tab header + class links-->
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- tab title -->
-  <title>Area of a Shape Calculator</title>
-  <!-- css link -->
-  <link rel="stylesheet" href="styles.css">
-  <!-- javascript link -->
-  <script src="script.js" async></script>
-</head>
 
-<!-- start of body -->
-<body>
-    <!-- start of main -->
-    <main>
-        <h1>Area Calculator</h1>
-        <p>
-            <u> <b>Information: </b> </u> <br><br>
-            This Custom Calculator results in <br>
-            finding the area of 4 geometric shapes: <br> <br>
-            Circle | Triangle | Square | Rectangle<br> <br>
-            Area Formulas will be shown depending on user's choice. <br>
-            Input for shape(s) is drop down options. <br>
-            Input for side is type number. <br>
-        </p>
+    <!-- site tab header + class links-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!-- tab title -->
+        <title>Area of a Shape Calculator</title>
+        <!-- css link -->
+        <link rel="stylesheet" href="styles.css">
+        <!-- javascript link -->
+        <script src="script.js" async></script>
+    </head>
 
-        <!-- Form tag is used to collect user input-->
-        <!-- action for 'calculate button' when user submits -->
-        <!-- form tag below calls 2 functions: calculateArea() and updateForm() -->
-        <form action="javascript:calculateArea()" onchange="javascript:updateForm()"></form>
-        <label for="id_shapes">Select a shape</label>
-        <!-- select element to create a drop down list  -->
-        <select id="id_shapes">
-            <!-- 'selected' indicates the option that is initially selected; the default selection -->
-            <option value="circle" selected>(Select a Shape)</option>
-            <option value="circle">Circle</option>
-            <option value="triangle">Triangle</option>
-            <option value="square">Square</option>
-            <option value="rectangle">Rectangle</option>
-        </select>
+    <!-- start of body -->
+    <body>
+        <!-- start of main -->
+        <main>
+            <h1>Area Calculator</h1>
+            <p>
+                <u> <b>Information: </b> </u> <br><br>
+                This Custom Calculator results in <br>
+                finding the area of 4 geometric shapes: <br> <br>
+                Circle | Triangle | Square | Rectangle<br> <br>
+                Area Formulas will be shown depending on user's choice. <br>
+                Input for shape(s) is drop down options. <br>
+                Input for side is type number. <br>
+            </p>
 
-        <!-- add some space -->
-        <br><br>
+            <!-- Form tag is used to collect user input-->
+            <!-- action for 'calculate button' when user submits -->
+            <!-- form tag below calls 2 functions: calculateArea() and updateForm() -->
+            <form action="javascript:calculateArea()" onchange="javascript:updateForm()"></form>
+            <label for="id_shapes">Select a shape</label>
+            <!-- select element to create a drop down list  -->
+            <select id="id_shapes">
+                <!-- 'selected' indicates the option that is initially selected; the default selection -->
+                <option value="circle" selected>(Select a Shape)</option>
+                <option value="circle">Circle</option>
+                <option value="triangle">Triangle</option>
+                <option value="square">Square</option>
+                <option value="rectangle">Rectangle</option>
+            </select>
 
-        <!-- now, we need to handle the inputs for each of these shapes -->
-        <!-- A div / section can be used to handle this -->
+            <!-- add some space -->
+            <br><br>
 
-        <!-- div info for circle -->
-        <div id="id_inputs_circle">
-            <!-- label for input: circle -->
-            <label for="id_radius">Radius</label>
-            <!-- input tag to specify where user can enter data -->
-            <!-- type=number to add the arrow keys; min=0 so no negative shape length; step allows user to input decimals  -->
-            <input id="id_radius" type="number" min="0" step="any">
-            <!-- visual formula for circle -->
-            <h1>Formula for Circle:</h1>
-            <h2><em>A = &Pi;r<sup>2</sup></em></h2>
-        </div>
+            <!-- now, we need to handle the inputs for each of these shapes -->
+            <!-- A div / section can be used to handle this -->
 
-        <!-- div info for triangle -->
-        <!-- hidden attribute to hide element for now -->
-        <div id="id_inputs_triangle" hidden>
-            <label for="id_base">Base</label>
-            <input id="id_base" type="number" min="0" step="any">
-            <label for="id_height">Height</label>
-            <input id="id_height" type="number" min="0" step="any">
-            <!-- visual formula for triangle -->
-            <h1>Formula for Triangle:</h1>
-            <h2><em>A = <sup>bh</sup>&frasl;<sub>2</sub></em></h2>
-        </div>
+            <!-- div info for circle -->
+            <div id="id_inputs_circle">
+                <!-- label for input: circle -->
+                <label for="id_radius">Radius</label>
+                <!-- input tag to specify where user can enter data -->
+                <!-- type=number to add the arrow keys; min=0 so no negative shape length; step allows user to input decimals  -->
+                <input id="id_radius" type="number" min="0" step="any">
+                <!-- visual formula for circle -->
+                <h1>Formula for Circle:</h1>
+                <h2><em>A = &Pi;r<sup>2</sup></em></h2>
+            </div>
 
-        <!-- div info for square -->
-        <!-- hidden attribute to hide element for now -->
-        <div id="id_inputs_square" hidden>
-            <label for="id_side">Side</label>
-            <input id="id_side" type="number" min="0" step="any">
-            <!-- visual formula for square -->
-            <h1>Formula for Square:</h1>
-            <h2><em>A = s<sup>2</sup></em></h2>
-        </div>
+            <!-- div info for triangle -->
+            <!-- hidden attribute to hide element for now -->
+            <div id="id_inputs_triangle" hidden>
+                <label for="id_base">Base</label>
+                <input id="id_base" type="number" min="0" step="any">
+                <label for="id_height">Height</label>
+                <input id="id_height" type="number" min="0" step="any">
+                <!-- visual formula for triangle -->
+                <h1>Formula for Triangle:</h1>
+                <h2><em>A = <sup>bh</sup>&frasl;<sub>2</sub></em></h2>
+            </div>
 
-        <!-- div info for rectangle -->
-        <!-- hidden attribute to hide element for now -->
-        <div id="id_inputs_rectangle" hidden>
-            <label for="id_length">Length</label>
-            <input id="id_length" type="number" min="0" step="any">
-            <label for="id_width">Width</label>
-            <input id="id_width" type="number" min="0" step="any">
-            <!-- visual formula for rectangle -->
-            <h1>Formula for Rectangle:</h1>
-            <h2><em>A = lw</em></h2>
-        </div>
+            <!-- div info for square -->
+            <!-- hidden attribute to hide element for now -->
+            <div id="id_inputs_square" hidden>
+                <label for="id_side">Side</label>
+                <input id="id_side" type="number" min="0" step="any">
+                <!-- visual formula for square -->
+                <h1>Formula for Square:</h1>
+                <h2><em>A = s<sup>2</sup></em></h2>
+            </div>
 
-        <!-- now, we need our submit botton  -->
-        <input type="submit" value="Calculate Area">
-        <!-- id for disaplyed output of the area; id so it can be referred  in javascript -->
-        <p id="id_output"></p>
+            <!-- div info for rectangle -->
+            <!-- hidden attribute to hide element for now -->
+            <div id="id_inputs_rectangle" hidden>
+                <label for="id_length">Length</label>
+                <input id="id_length" type="number" min="0" step="any">
+                <label for="id_width">Width</label>
+                <input id="id_width" type="number" min="0" step="any">
+                <!-- visual formula for rectangle -->
+                <h1>Formula for Rectangle:</h1>
+                <h2><em>A = lw</em></h2>
+            </div>
 
-    </main>
-</body>
+            <!-- now, we need our submit botton  -->
+            <input type="submit" value="Calculate Area">
+            <!-- id for disaplyed output of the area; id so it can be referred  in javascript -->
+            <p id="id_output"></p>
+
+        </main>
+    </body>
+
+    <footer> 
+        <br><br><br><br><br><br><br><br><br><br>
+        <p>@ Aldrin Brillante</p>
+    </footer>
 
 </html>
